<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="@dimen/large_app_dimension"
        android:layout_marginTop="@dimen/large_app_dimension"
        android:layout_marginBottom="@dimen/large_app_dimension"
        android:gravity="center_horizontal"
        android:text="@string/string_welcome"
        android:textSize="@dimen/xlarge_text_size" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_app_dimension"
        android:layout_marginTop="@dimen/normal_app_dimension"
        android:layout_marginEnd="@dimen/normal_app_dimension"
        android:background="@color/light_gray"
        android:text="@string/string_welcome_text" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_app_dimension"
        android:layout_marginTop="@dimen/normal_app_dimension"
        android:layout_marginEnd="@dimen/normal_app_dimension"
        android:background="@color/light_gray"
        android:text="@string/string_welcome_add" />

    <Button
        android:id="@+id/btn_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_app_dimension"
        android:layout_marginTop="@dimen/large_app_dimension"
        android:layout_marginEnd="@dimen/normal_app_dimension"
        android:text="@string/string_instructions" />
    </LinearLayout>
</layout>